[package]
name = "image_to_pdf"
version = "0.2.4"
edition = "2021"
description = "Create PDFs from images"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["image", "pdf"]
categories = ["multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
img-parts = "0.2"
jpeg-decoder = "0.1"
kamadak-exif = "0.5"
printpdf = { version = "0.3", features = ["embedded_images"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
structopt = "0.3"

[dev-dependencies]
version-sync = "0.9"
