[package]
name = "image_to_pdf"
version = "0.3.1"
edition = "2021"
description = "Create PDFs from images"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["image", "pdf"]
categories = ["multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
img-parts = "0.2"
printpdf = { version = "0.5.3", features = ["embedded_images"] }
rayon = "1.5.3"

[dev-dependencies]
version-sync = "0.9"

[profile.release]
strip = true
lto = true
codegen-units = 1

